# syphon

./: .gitignore  Cargo.toml
.cargo/: config.toml
examples/wikipedia/: main.rs
src/: client.rs  error.rs  handler.rs  lib.rs  next_action.rs  response.rs  website.rs
src/extractor/: data.rs  json.rs  mod.rs  selector.rs  url.rs
syphon_macro/: Cargo.toml
syphon_macro/src/: lib.rs
