[package]
name = "syphon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"], optional = true }
serde_json = "1.0.107"
thiserror = "1.0.50"
tl = "0.7.7"
tokio = { version = "1.33.0", features = ["full"] }
syphon_macro = { path = "./syphon_macro" }
async-trait = "0.1.74"
pin-project-lite = "0.2.13"
uuid = { version = "1.5.0", features = ["rand", "v4"] }
rand = "0.8.5"
tokio-stream = "0.1.14"

[features]
default = ["serde", "extractor", "simd"]
full = ["serde", "extractor"]
serde = ["serde/derive"]
extractor = []
simd = ["tl/simd"]
